@@ -1,0 +1,1 @@
+Five omnibus tests for testing the composite hypothesis of normality.
