@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:23:11 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/nortest/
+COMMENT=	Tests for normality
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+R_PKGNAME=	nortest
+R_PKGVER=	1.0-4
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
